--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FishEye</title>
         <meta name="description" content="Le site où trouver le photographe freelance qui vous convient">
-        <link rel="stylesheet" href="css/card.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/main.css">
         <script src="js/composants/photographer.js" defer></script>
         <script src="js/dataManager.js" defer></script>
         <script src="js/pages/index.js" defer></script>
@@ -14,6 +17,20 @@
     </head>
 
     <body>
+
+        <header>
+            <img src="images.logo.png" alt="logo FishEye">
+            <nav aria-label="photographer-categories">
+                <a href="?">#Portrait</a>
+                <a href="?">#Art</a>
+                <a href="?">#Fashion</a>
+                <a href="?">#Architecture</a>
+                <a href="?">#Travel</a>
+                <a href="?">#Sport</a>
+                <a href="?">#Animals</a>
+                <a href="?">#Events</a>
+            </nav>
+        </header>
     
     </body>
 </html>
