--- a/photographerPage.html
+++ b/photographerPage.html
@@ -10,10 +10,11 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
+        <script src="js/composants/photographerMedia.js" defer></script>
         <script src="js/composants/photographer.js" defer></script>
         <script src="js/dataManager.js" defer></script>
-        <script src="js/pages/index.js" defer></script>
-        <script src="js/main.js" defer></script>
+        <script src="js/pages/photographerPage.js" defer></script>
+        <script src="js/photographerMediaPage.js" defer></script>
     </head>
 
     <body>
