affichage des vues

--- a/photographerPage.html
+++ b/photographerPage.html
@@ -12,24 +12,15 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="js/composants/photographerMedia.js" defer></script>
         <script src="js/composants/photographer.js" defer></script>
+        <script src="js/composants/header.js" defer></script>
+        <script src="js/composants/navtags.js" defer></script>
+        <script src="js/composants/tag.js" defer></script>
         <script src="js/dataManager.js" defer></script>
         <script src="js/pages/photographerPage.js" defer></script>
         <script src="js/photographerMediaPage.js" defer></script>
     </head>
 
     <body>
-
-        <!-- <article>
-            <h2>${this.name}</h2>
-            <p class='location'>${this.city}, ${this.country}</p>
-            <p class='tagline'>${this.tagline}</p>
-            <p class='tags'>${this.tags}</p>
-        </article>
-
-        <button class="contact-me">Contactez-moi</button>
-        <img class='portrait' src='../images/photographers_id_photos/${this.portrait}' alt="${this.photographerImageDescription}">
-             -->
-    
         
     </body>
 </html>
