--- a/index.html
+++ b/index.html
@@ -11,24 +11,15 @@
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/composants/photographer.js" defer></script>
+        <script src="js/composants/header.js" defer></script>
+        <script src="js/composants/navtags.js" defer></script>
+        <script src="js/composants/tag.js" defer></script>
         <script src="js/dataManager.js" defer></script>
         <script src="js/pages/index.js" defer></script>
         <script src="js/main.js" defer></script>
     </head>
 
-    <body>
-
-        <!-- <article>
-            <h2>${this.name}</h2>
-            <p class='location'>${this.city}, ${this.country}</p>
-            <p class='tagline'>${this.tagline}</p>
-            <p class='tags'>${this.tags}</p>
-        </article>
-
-        <button class="contact-me">Contactez-moi</button>
-        <img class='portrait' src='../images/photographers_id_photos/${this.portrait}' alt="${this.photographerImageDescription}">
-             -->
-    
+    <body>    
         
     </body>
 </html>
