new adds and modifications with beginning of interactions

--- a/photographerPage.html
+++ b/photographerPage.html
@@ -15,6 +15,7 @@
         <script src="js/composants/header.js" defer></script>
         <script src="js/composants/navtags.js" defer></script>
         <script src="js/composants/tag.js" defer></script>
+        <script src="js/composants/simpleComponent.js" defer></script>
         <script src="js/dataManager.js" defer></script>
         <script src="js/pages/photographerPage.js" defer></script>
         <script src="js/photographerMediaPage.js" defer></script>
