--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/composants/photographer.js" defer></script>
+        <!-- <script src="js/composants/photographerMedia.js" defer></script> -->
         <script src="js/composants/header.js" defer></script>
         <script src="js/composants/navtags.js" defer></script>
         <script src="js/composants/tag.js" defer></script>
+        <script src="js/composants/simpleComponent.js" defer></script>
         <script src="js/dataManager.js" defer></script>
         <script src="js/pages/index.js" defer></script>
+        <!-- <script src="js/pages/photographerPage.js" defer></script> -->
         <script src="js/main.js" defer></script>
+        <!-- <script src="js/photographerMediaPage.js" defer></script> -->
+
     </head>
 
-    <body>    
+    <body>
         
     </body>
 </html>
