--- a/photographerPage.html
+++ b/photographerPage.html
@@ -10,18 +10,89 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/composants/photographerMedia.js" defer></script>
-        <script src="js/composants/photographer.js" defer></script>
+        <script src="js/dataManager.js" defer></script>
+        <script src="js/photographerMediaPage.js" defer></script>
+        <script src="js/composants/contactButton.js" defer></script>
+        <script src="js/composants/contentForm.js" defer></script>
+        <script src="js/composants/form.js" defer></script>
+        <script src="js/composants/formData.js" defer></script>
         <script src="js/composants/header.js" defer></script>
         <script src="js/composants/navtags.js" defer></script>
-        <script src="js/composants/tag.js" defer></script>
+        <script src="js/composants/photographer.js" defer></script>
+        <script src="js/composants/photographerMedia.js" defer></script>
+        <script src="js/composants/portraitPhotographer.js" defer></script>
         <script src="js/composants/simpleComponent.js" defer></script>
-        <script src="js/dataManager.js" defer></script>
+        <script src="js/composants/sorting.js" defer></script>
+        <script src="js/composants/tag.js" defer></script>
         <script src="js/pages/photographerPage.js" defer></script>
-        <script src="js/photographerMediaPage.js" defer></script>
     </head>
 
     <body>
+
+        <div class="bground">
+            <div class="content">
+              <span id="close" class="close"></span>
+              <h3 id="title-form" class="title-form">Contactez-moi</h3>
+              <h3 id='photographer-name' class='photographer-name'></h3>
+              <div id="modal-body" class="modal-body">
+                <form
+                  name="contact-form"
+                  id="contact-form"
+                  action="photographerPage.html"
+                  method="get"
+                  onsubmit="validate()"
+                >
+      
+                  <div class="formData">
+                    <label for="first-name">Prénom</label><br />
+                    <input
+                      class="text-control name"
+                      type="text"
+                      id="first-name"
+                      name="first-name"
+                    />
+                    <span id="first-name-error" class="verif"></span>
+                  </div>
+                  <div class="formData">
+                    <label for="last-name">Nom</label><br />
+                    <input
+                      class="text-control name"
+                      type="text"
+                      id="last-name"
+                      name="last-name"
+                    />
+                    <span id="last-name-error" class="verif"></span>
+                  </div>
+                  <div class="formData">
+                    <label for="email">E-mail</label><br />
+                    <input
+                      class="text-control"
+                      type="email"
+                      id="email"
+                      name="email"
+                    />
+                    <span id="email-error" class="verif"></span>
+                  </div>
+                  <div class="formData">
+                    <label for="message">Votre message</label><br />
+                    <input
+                      class="text-control message"
+                      type="textarea"
+                      id="message"
+                      name="message"
+                    />
+                    <span id="first-name-error" class="verif"></span>
+                  </div>
+                  <input
+                    id="btn-submit"
+                    class="btn-submit button"
+                    type="submit"
+                    value="Envoyer"
+                  />
+                </form>
+              </div>
+            </div>
+          </div>
         
     </body>
 </html>
