add module system to the project

--- a/photographerPage.html
+++ b/photographerPage.html
@@ -10,9 +10,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/dataManager.js" defer></script>
-        <script src="js/photographerMediaPage.js" defer></script>
-        <script src="js/composants/contactButton.js" defer></script>
+        <!-- <script src="js/dataManager.js" defer type="module"></script> -->
+        <script src="js/photographerMediaPage.js" defer type="module"></script>
+        <!-- <script src="js/composants/contactButton.js" defer></script>
         <script src="js/composants/contentForm.js" defer></script>
         <script src="js/composants/form.js" defer></script>
         <script src="js/composants/formData.js" defer></script>
@@ -24,7 +24,7 @@
         <script src="js/composants/simpleComponent.js" defer></script>
         <script src="js/composants/sorting.js" defer></script>
         <script src="js/composants/tag.js" defer></script>
-        <script src="js/pages/photographerPage.js" defer></script>
+        <script src="js/pages/photographerPage.js" defer type="module"></script> -->
     </head>
 
     <body>
