new and modifications

--- a/photographerPage.html
+++ b/photographerPage.html
@@ -29,8 +29,7 @@
 
     <body>
 
-        <div class="bground">
-            <div class="content">
+            <!-- <div class="content">
               <span id="close" class="close"></span>
               <h3 id="title-form" class="title-form">Contactez-moi</h3>
               <h3 id='photographer-name' class='photographer-name'></h3>
@@ -92,7 +91,7 @@
                 </form>
               </div>
             </div>
-          </div>
+          </div> -->
         
     </body>
 </html>
