--- a/photographerPage.html
+++ b/photographerPage.html
@@ -10,6 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
+        <permissions-policy: interest-cohort=()>
         <!-- <script src="js/dataManager.js" defer type="module"></script> -->
         <script src="js/photographerMediaPage.js" defer type="module"></script>
         <!-- <script src="js/composants/contactButton.js" defer></script>
