--- a/photographerPage.html
+++ b/photographerPage.html
@@ -11,6 +11,7 @@
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
         <permissions-policy: interest-cohort=()>
+        <script src="https://kit.fontawesome.com/7a1a2f8e97.js" crossorigin="anonymous"></script>
         <!-- <script src="js/dataManager.js" defer type="module"></script> -->
         <script src="js/photographerMediaPage.js" defer type="module"></script>
         <!-- <script src="js/composants/contactButton.js" defer></script>
