--- a/photographerPage.html
+++ b/photographerPage.html
@@ -11,7 +11,7 @@
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/main.css">
         <script src="https://kit.fontawesome.com/7a1a2f8e97.js" crossorigin="anonymous"></script>
-        <script src="js/photographerMediaPage.js" type="module"></script>
+        <script src="js/factoryMedia.js" type="module"></script>
     </head>
 
     <body>
